--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
+    "react-select": "^5.10.1",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
